Added events on inputs

--- a/angular-2/app/kenteken-component/kenteken.component.html
+++ b/angular-2/app/kenteken-component/kenteken.component.html
@@ -1,3 +1,4 @@
 <h1>Kenteken</h1>
 
-<input type="text" />
+<input type="text" (blur)="maskKenteken($event)"/>
+<button (click)="kentekenOphalen($event)">Ophalen</button>
